# shouhin-jouhou-kanri-v3

./: .gitignore  README.md  backlog.md  cms.py  pyproject.toml  requirements.txt  商品信息管理.py  订货逻辑.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml.example
assets/: 商品登録ツール_0418.html
data_warehouse/: __init__.py
deploy/: README-DEPLOY.md  push.sh
docs/: 01-增强方案-2026-05-05.md  03-metrics-v3-2026-05-05.md  04-automation-architecture.md  05-comfyui-research.md  06-n8n-image-generation.md  07-lark-integration.md  08-data-model-v2.md  09-tomorrow-deployment.md  10-database-tables-reference.md  11-architecture-final.md  12-nst-data-source-consolidation.md  13-nst-saved-search-field-list.md  14-ui-redesign-mockup.html  15-nst-api-field-spec.md  16-purchase-decision-spec.md  17-订货算法选型.md
legacy_streamlit/: README.md  main.py
pages/: 02_🔍_商品情报检索.py  03_💰_定義原価編集.py  04_📊_销售数据查询.py  05_🏪_店铺别毛利.py  06_📦_库存健康监控.py  07_🏷️_商品等级判定.py  08_📦_発注AI.py  09_📜_発注履歴.py  10_📦_発注書作成.py  11_💡_运营调整建议.py  12_🚫_入荷困難商品.py  13_⚠️_改廃確認.py  14_💱_Shopee財務.py  14_💱_財務.py  15_📝_商品登录.py  16_📈_等级历史趋势.py  17_💰_价格改善.py  18_📆_前日销售数据.py  18_📆_每日销售.py  18_📦_订货依据.py  19_🧊_保质期管理.py  20_📈_定义原价波动图.py  21_🚀_Shopee上架.py  22_🗄️_数据库管理.py  22_🤖_Shopee自动上架.py  23_🏷️_Tag管理.py  24_♻️_不良品処分CSV.py  25_📦_発注AI_v2.py  26_🌐_图片翻译.py  99_⚙️_数据导入与设置.py
shared/: auth.py  db.py  filters.py  forex.py  i18n.py  i18n_columns.py  kpi_history.py  lark_auth.py  lark_notify.py  lark_openapi.py  markets.py  n8n_client.py  purchase_engine.py  schema.sql  supabase_client.py  theme.py  v2_browser.py  (+1 more)
(+138 files in other folders)
