[project]
name = "shouhin-jouhou-kanri"
version = "0.1.0"
description = "商品信息管理平台 - SmikieJapan 综合商品分析与运营工具集"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "pandas>=2.2",
    "plotly>=5.20",
    "google-genai>=0.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_warehouse*", "modules*", "shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
